--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start:prod": ""
+    "build": "webpack --config webpack.config.js",
+    "start:prod": "npm run build && node dist/bundle.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
